# beetween

./: .gitignore  .markdownlint.json  .pre-commit-config.yaml  CHANGELOG.md  CLAUDE.md  CONTRIBUTING.md  README.md  Taskfile.yml  check-links.sh  mkdocs.yml  project_struture.txt  pyproject.toml
.github/workflows/: docs-new.yml  docs.yml
docs/: CONTRIBUTING.md  DEVELOPMENT.md  DOCUMENTATION-CHECKLIST.md  QUICK-START.md  START-HERE.md  index.md
docs/decisions/: architecture.md  index.md  lessons.md  pivots.md  technology.md
docs/decisions/product/: adr-002-user-auth-approach.md
docs/decisions/templates/: adr-template.md
docs/features/: README.md  _template.md  feature-analysis.md
docs/features/bites/: feature.md
docs/features/box-office/: feature.md
docs/features/bucks/: feature.md
docs/features/dashboard/: design.md  implementation.md  index.md  requirements.md  status.md  testing.md
docs/features/data-processing/: design.md  implementation.md  index.md  (+3 more)
docs/overview/: metrics.md  roadmap.md  team.md  vision.md
docs/product/: launch-plan.md  metrics.md  personas.md  roadmap.md  team.md  vision.md
docs/resources/: guidelines.md  index.md  meetings.md  onboarding.md  setup.md
docs/software-3.0/: agent-ready.md  ai-features.md  index.md  partnership-automation.md
docs/templates/: README.md  api-template.md  decision-template.md  faq-template.md  feature-template.md  getting-started-template.md  meeting-notes-template.md  process-template.md  release-notes-template.md  security-template.md  troubleshooting-template.md  user-guide-template.md
(+14 files in other folders)
