[tool.poetry]
name = "beetween"
version = "0.1.0"
description = "Collaborative documentation hub bridging clients, product, development, design, testing, and deployment teams for the Beet product"
authors = ["Ranga Reddy Nukala <ranga@alterdimensions.com>"]
readme = "README.md"
packages = []
package-mode = false

[tool.poetry.dependencies]
python = ">=3.8.1,<4.0"
mkdocs = "^1.5.3"
mkdocs-material = "^9.4.0"
mkdocs-mermaid2-plugin = "^1.1.1"
mkdocs-glightbox = "^0.3.4"
mkdocs-git-revision-date-localized-plugin = "^1.2.0"
mkdocs-minify-plugin = "^0.7.1"
mkdocs-redirects = "^1.2.1"
pymdown-extensions = "^10.3.1"
pillow = "^10.0.0"
cairosvg = "^2.7.1"
pyyaml = "^6.0.1"

[tool.poetry.group.dev.dependencies]
black = "^23.0.0"
isort = "^5.12.0"
flake8 = "^6.0.0"
pre-commit = "^3.0.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
